# model-garden

./: .env.example  .gitignore  API_COMPARISON.md  CONTRIBUTING.md  DEPLOYMENT.md  DTYPE_DETECTION_FIX.md  GITHUB_SETUP.md  HUGGINGFACE_HUB_SUPPORT.md  INSTALL.md  LICENSE  MEMORY_INVESTIGATION_FINDINGS.md  MEMORY_LEAK_ANALYSIS.md  MEMORY_LEAK_CACHE_FIX.md  MEMORY_LEAK_EXACT_DIFFERENCE.md  MEMORY_LEAK_FINAL_ANALYSIS.md  MEMORY_LEAK_FIX.md  MEMORY_LEAK_REAL_ANALYSIS.md  MEMORY_LEAK_ROOT_CAUSE.md  MEMORY_LEAK_TORCH_COMPILE_FIX.md  MEMORY_WORKAROUND_REMOVAL.md  MODEL_PATH_MIGRATION.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  STRUCTURED_OUTPUTS.md  SUMMARY.md  SYSTEMD_SERVICE_INSTALLED.md  TEST_RESULTS_ANALYSIS.md  TRAINING_MEMORY_ISOLATION.md  UNSLOTH_MEMORY_LEAK_BUG_REPORT.md  VALIDATION_QUICKSTART.md  VISION_HUB_FIX.md  VISION_MEMORY_LEAK_ROOT_CAUSE.md  VISION_MEMORY_LEAK_WORKAROUND.md  VISION_STRUCTURED_OUTPUTS_TEST_RESULTS.md  VISION_SUPPORT.md  VISION_TRAINING_FIXES.md  check_dataset_structure.py  cleanup_gpu.sh  debug_structured.py  (+35 more)
.github/: copilot-instructions.md
data/: example_dataset.jsonl  vision_dataset.jsonl
docs/: 00-project-overview.md  01-technology-research.md  02-system-architecture.md  03-api-specification.md  04-data-models.md  05-development-workflow.md  06-frontend-design.md  07-troubleshooting.md  08-vision-language-training.md  09-inference-serving.md  10-structured-outputs.md  11-boamps-integration.md  12-auto-gpu-memory.md  13-selective-loss-structured-outputs.md  14-selective-loss-implementation.md  15-model-registry.md  16-systemd-service-setup.md  17-training-quality-settings.md
examples/: auto_gpu_memory_demo.py  selective_loss_example.py  structured_output_curl.sh  structured_output_openai_client.py  structured_output_test.py  structured_output_vision_test.py  test_max_tokens_fix.py  test_vision_structured_integration.py
frontend/: .gitignore  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: Badge.svelte  Button.svelte  Card.svelte  LossChart.svelte  Navigation.svelte  UploadToHubModal.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/datasets/: +page.svelte
frontend/src/routes/emissions/: +page.svelte
frontend/src/routes/inference/: +page.svelte
frontend/src/routes/models/: +page.svelte
frontend/src/routes/models/[name]/: +page.svelte
frontend/src/routes/models/browse/: +page.svelte
frontend/src/routes/models/load/: +page.svelte
frontend/src/routes/training/: +page.svelte
frontend/src/routes/training/[id]/: +page.svelte
frontend/src/routes/training/new/: +page.svelte
model_garden/: __init__.py  api.py  cli.py  dataset_validator.py  early_stopping.py  inference.py  job_queue.py  memory_management.py  model_registry.py  selective_loss.py  training.py  training_subprocess.py  training_utils.py  vision_training.py
model_garden/carbon/: __init__.py  boamps.py  database.py  hardware_detection.py  inference_tracking.py  tracker.py
storage/: models_registry.json  models_registry.schema.json
