[project]
name = "model-garden"
version = "0.1.0"
description = "Fine-tune and serve LLMs with carbon footprint tracking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Model Garden Contributors" }
]
keywords = ["llm", "fine-tuning", "machine-learning", "ai", "unsloth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.5.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "accelerate>=0.29.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.10.0",
    "trl>=0.8.6",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "python-multipart>=0.0.9",
    "click>=8.1.7",
    "rich>=13.7.1",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "xformers>=0.0.26",
    "torchvision>=0.20.0",
    "pillow>=10.0.0",
    "vllm>=0.6.0",
    "openai>=1.0.0",
    "pynvml>=13.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
model-garden = "model_garden.cli:main"

[project.urls]
Homepage = "https://github.com/leokeba/model-garden"
Documentation = "https://github.com/leokeba/model-garden/tree/main/docs"
Repository = "https://github.com/leokeba/model-garden"
Issues = "https://github.com/leokeba/model-garden/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_garden*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["model_garden"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
