[project]
name = "model-garden"
version = "0.1.0"
description = "Fine-tune and serve LLMs with carbon footprint tracking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Model Garden Contributors" }
]
keywords = ["llm", "fine-tuning", "machine-learning", "ai", "unsloth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.8.0",
    "datasets>=2.19.0",
    "accelerate>=1.10.0",
    "bitsandbytes==0.48.1",  # Frozen: Required for Qwen2.5-VL-72B loading
    "peft>=0.10.0",
    "trl>=0.23.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "sqlalchemy>=2.0.29",
    "python-multipart>=0.0.9",
    "click>=8.2.0",
    "rich>=13.7.1",
    "xformers>=0.0.32",
    "torchvision>=0.23.0",
    "pillow>=10.0.0",
    "vllm>=0.6.0",
    "openai>=2.3.0",
    "pynvml>=13.0.1",
    "python-dotenv>=1.1.1",
    "codecarbon>=2.4.0",
    "transformers==4.56.2",  # Frozen: Required for Qwen2.5-VL-72B loading
    "unsloth==2025.10.8",  # Frozen: Required for Qwen2.5-VL-72B loading
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
model-garden = "model_garden.cli:main"

[project.urls]
Homepage = "https://github.com/leokeba/model-garden"
Documentation = "https://github.com/leokeba/model-garden/tree/main/docs"
Repository = "https://github.com/leokeba/model-garden"
Issues = "https://github.com/leokeba/model-garden/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_garden*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["model_garden"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.uv]
override-dependencies = [
]
